--- a/app/templates/EditProfile.html
+++ b/app/templates/EditProfile.html
@@ -1,15 +1,6 @@
-<html lang="en" ng-app="eventsApp">
-<head>
-    <meta charset="utf-8">
-    <title>Event Registration</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/css/app.css"/>
-</head>
-<body>
-
-<div class="container-fluid" ng-controller="EditProfileController">
+<div class="container" style="padding-left:20px; padding-right:20px;">
     <form name="profileForm">
-        <div class="row-fluid">
+        <div class="row">
             <div class="span3">
                 <img ng-src="{{getGravatarUrl(user.emailAddress)}}"/>
             </div>
@@ -38,23 +29,9 @@
         </div>
         <div class="row-fluid">
             <div class="span6 offset3">
-                <div class="pull-left"><span class="btn">Cancel</span></div>
+                <button type="button" ng-click="cancelEvent()" class="btn btn-default">Cancel</button>
                 <div class="pull-right"><button type="submit" class="btn btn-primary">Save</button></div>
             </div>
         </div>
     </form>
 </div>
-
-
-<script src="/lib/jquery.min.js"></script>
-<script src="/lib/angular/angular.js"></script>
-<script src="/lib/angular/angular-sanitize.js"></script>
-<script src="/lib/underscore-1.4.4.min.js"></script>
-<script src="/js/app.js"></script>
-<script src="/js/controllers/EditProfileController.js"></script>
-<script src="/js/services/GravatarUrlBuilder.js"></script>
-<script src="/js/filters.js"></script>
-<script src="/lib/bootstrap.min.js"></script>
-
-</body>
-</html>
